deploy-website/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: website
